# Rust-distributed-tracing-example

./: .gitignore  Cargo.toml  Readme.md  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs  models.rs
db/: Dockerfile  init.sql
service1/: Cargo.toml
service1/src/: config.rs  error.rs  handlers.rs  main.rs  state.rs
service2/: Cargo.toml
service2/src/: config.rs  main.rs
