[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lapin = { version = "2" }
opentelemetry = { version = "0.17", features = ["rt-tokio", "tokio", "metrics"] }
opentelemetry-zipkin = { version = "*", features = ["reqwest-client"], default-features = false }
serde = { version = "1.0.125" }
sqlx = { version = "0.6", features = ["postgres", "uuid", "chrono", "runtime-actix-native-tls"] }
tokio = { version = "1" }
tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = { version = "0.17" }
tracing-subscriber = { version = "0.3", features = ["json", "time", "env-filter"] }
