[package]
name = "service1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", features = ["cargo", "derive", "env"] }
common = { path = "../common" }
lapin = { version = "2" }
opentelemetry = { version = "0.17", features = ["rt-tokio", "tokio", "metrics"] }
serde = { version = "1.0.125" }
serde_json = { version = "1.0" }
sqlx = { version = "0.6", features = ["postgres", "uuid", "chrono", "runtime-actix-native-tls"] }
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-actix-web = { version =  "0.6", features = ["opentelemetry_0_17"] }
tracing-opentelemetry = { version = "0.17" }
