[package]
name = "service2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "3.1", features = ["cargo", "derive", "env"] }
common = { path = "../common" }
futures-util = "0.3"
lapin = { version = "2" }
opentelemetry = { version = "0.17", features = ["rt-tokio", "tokio", "metrics"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-opentelemetry = { version = "0.17" }
